# muse-maskgit-pytorch

./: .gitignore  .pre-commit-config.yaml  README.md  attn_test.py  infer_maskgit.py  infer_vae.py  pyproject.toml  setup.py  tpu-vm.env  train_muse_maskgit.py  train_muse_vae.py
.github/: FUNDING.yml
.github/workflows/: pre-commit.yml  python-publish.yml
attn/: ein_attn.py  sdp_attn.py  xformers_attn.py
muse_maskgit_pytorch/: __init__.py  dataset.py  muse_maskgit_pytorch.py  t5.py  utils.py  vqgan_vae.py  vqgan_vae_taming.py
muse_maskgit_pytorch/attn/: attn_test.py  ein_attn.py  sdp_attn.py  xformers_attn.py
muse_maskgit_pytorch/modules/: __init__.py  attention.py  mlp.py
muse_maskgit_pytorch/trainers/: __init__.py  base_accelerated_trainer.py  maskgit_trainer.py  vqvae_trainers.py
muse_maskgit_pytorch/vqvae/: __init__.py  config.py  discriminator.py  layers.py  quantize.py  vqvae.py
scripts/: vqvae_test.py
