[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0", "wheel", "setuptools_scm[toml]>=6.2"]

[tool.setuptools_scm]
write_to = "muse_maskgit_pytorch/_version.py"

[tool.black]
line-length = 110
target-version = ['py38', 'py39', 'py310']

[tool.ruff]
line-length = 110
target-version = 'py38'
format = "grouped"
ignore-init-module-imports = true
select = ["E", "F", "I"]
ignore = ['F841', 'F401', 'E501']

[tool.ruff.isort]
combine-as-imports = true
force-wrap-aliases = true
known-local-folder = ["muse_maskgit_pytorch"]
known-first-party = ["muse_maskgit_pytorch"]
